src/objects/TimeZoneDetails__c.object
<CustomObject>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TimeZoneDetail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TZ-{0000}</displayFormat>
        <label>TimeZoneDetails Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeZoneDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>